--- a/package.json
+++ b/package.json
@@ -14,12 +14,15 @@
     "@fortawesome/free-solid-svg-icons": "^6.4.2",
     "@fortawesome/react-fontawesome": "^0.2.0",
     "@smastrom/react-rating": "^1.3.2",
+    "@tanstack/react-query": "^4.36.1",
+    "axios": "^1.5.1",
     "firebase": "^10.4.0",
     "localforage": "^1.10.0",
     "match-sorter": "^6.3.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-rating": "^2.0.5",
+    "react-rating-stars-component": "^2.2.0",
     "react-router-dom": "^6.16.0",
     "sort-by": "^1.2.0",
     "sweetalert2": "^11.7.32"
