--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "match-sorter": "^6.3.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-icons": "^4.11.0",
     "react-loading-skeleton": "^3.3.1",
     "react-rating": "^2.0.5",
     "react-rating-stars-component": "^2.2.0",
